src/test/test-models/bad/cdf-sample.stan
data {
  real y;
}
model {
  y ~ normal_cdf(1, 1);
}
